--- a/NodejsWebApp1/package.json
+++ b/NodejsWebApp1/package.json
@@ -4,7 +4,7 @@
   "description": "NodejsWebApp1",
   "main": "server.js",
   "author": {
-    "name": "Mihirdeo_Mishra",
+    "name": "Mihirdeo Mishra",
     "email": "mihirdeo7@gmail.com"
   }
 }
